--- a/src/app/Task/add-task/add-task.component.css
+++ b/src/app/Task/add-task/add-task.component.css
@@ -2,14 +2,14 @@ body {
      background: url('https://static-communitytable.parade.com/wp-content/uploads/2014/03/rethink-target-heart-rate-number-ftr.jpg') fixed;
     background-size: cover;
 }
-
+/* 
 *[role="form"] {
     max-width: 530px;
     padding: 15px;
     margin: 0 auto;
     border-radius: 0.3em;
-    /* background-color: #f2f2f2; */
-}
+    /* background-color: #f2f2f2; 
+} */
 
 /* *[role="form"] h2 { 
     font-family: 'Open Sans' , sans-serif;
