--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,17 +11,17 @@
         <ul class="nav nav-bar navbar-nav ml-auto">
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="adduser">
-                    <b>Add User</b>
+                    <b>User</b>
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="addproject">
-                    <b>Add Project</b>
+                    <b>Project</b>
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="addtask">
-                    <b>Add Task</b>
+                    <b>Task</b>
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
