--- a/src/app/User/add-user/add-user.component.html
+++ b/src/app/User/add-user/add-user.component.html
@@ -5,7 +5,7 @@
     <div class="col-lg-3 col-md-3 col-sm-12">
       <form #addUserForm="ngForm" novalidate class="form-horizontal" role="form">
         <div class="card">
-          <div class="card-header bg-success text-white">Add User</div>
+          <div class="card-header bg-info text-white">User</div>
           <div class="card-body">
             <div class="form-group">
               <label for="task" class="col-sm-5 control-label">First Name</label>
@@ -38,8 +38,8 @@
             <!-- /.form-group -->
             <div class="form-group">
               <div class="col-sm-9 col-sm-offset-3">
-                <button type="submit" (click)="Add(addUserForm)" [disabled]="addUserForm.invalid" class="btn btn-info">{{UpdateFlag == false ? 'Add': 'Update'}}</button>
-                <button type="reset" id="reset" class="btn btn-info ml-1">Reset</button>
+                <button type="submit" (click)="Add(addUserForm)" [disabled]="addUserForm.invalid" class="btn btn-danger">{{UpdateFlag == false ? 'Add': 'Update'}}</button>
+                <button type="button" (click)="reset(addUserForm)" id="reset" class="btn btn-danger ml-1">Reset</button>
               </div>
             </div>
           </div>
@@ -48,7 +48,7 @@
     </div>
     <div class="col-lg-9 col-md-9 col-sm-12">
       <div class="card">
-        <div class="card-header bg-success text-white">Project Details</div>
+        <div class="card-header bg-info text-white">User Details</div>
         <div class="card-body">
           <div class="form-row">
             <div class="form-group col-md-6">
@@ -62,7 +62,7 @@
           </div>
           <hr>
           <table class="table table-bordered table-stripped"  [mfData]="userDetails" #mf="mfDataTable" [mfRowsOnPage]="10">
-          <thead class="bg-success text-white">
+          <thead class="table-dark">
             <tr>
               <th scope="col"><mfDefaultSorter by="FirstName">First Name</mfDefaultSorter></th>
               <th scope="col"><mfDefaultSorter by="LastName">Last Name</mfDefaultSorter></th>
@@ -78,10 +78,10 @@
               <td>
                 <div class=" btn-toolbar" role="toolbar">
                   <div class="btn-group" role="group">
-                    <input type="button" (click)="Edit(user.UserId)" class="btn btn-info" value="Edit">
+                    <input type="button" (click)="Edit(user.UserId)" class="btn btn-danger" value="Edit">
                   </div>
                   <div class="btn-group ml-2" role="group">
-                    <input type="button" (click)="ModelPopup(content, user.UserId)" class="btn btn-info" value="Delete">
+                    <input type="button" (click)="ModelPopup(content, user.UserId)" class="btn btn-danger" value="Delete">
                   </div>
                 </div>
               </td>
@@ -113,7 +113,7 @@
       <p>Are you sure do you want delete this user?</p>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-info" (click)="Delete()">Delete</button>
-      <button type="button" class="btn btn-info" (click)="modal.close('Close click')">Close</button>
+      <button type="button" class="btn btn-danger" (click)="Delete()">Delete</button>
+      <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Close</button>
     </div>
   </ng-template>
