--- a/src/app/Project/add-project/add-project.component.html
+++ b/src/app/Project/add-project/add-project.component.html
@@ -5,7 +5,7 @@
     <div class="col-lg-4 col-md-4 col-sm-12">
       <form #addprojectForm="ngForm" novalidate class="form-horizontal" role="form">
         <div class="card">
-          <div class="card-header bg-success text-white">Add Project</div>
+          <div class="card-header bg-info text-white">Add Project</div>
           <div class="card-body">
             <div class="form-group">
               <label for="task" class="col-sm-5 control-label">Name</label>
@@ -43,7 +43,7 @@
                 </div>
               </div>
              
-            <div class="form-group">
+            <div class="form-group" *ngIf="setDateFlag">
               <label for="startdate" class="col-sm-5 control-label">Start Date</label>
               <div class="col-sm-9">
                 <input type="text" [required]="setDateFlag" [disabled]="!setDateFlag" [(ngModel)]="project.Start_Date"  [(bsValue)]="project.Start_Date"
@@ -54,7 +54,7 @@
                   is required</span>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" *ngIf="setDateFlag">
               <label for="enddate" class="col-sm-5 control-label">End Date</label>
               <div class="col-sm-9">
                 <input type="text" [required]="setDateFlag" [disabled]="!setDateFlag" [(ngModel)]="project.End_Date" [(bsValue)]="project.End_Date"
@@ -72,9 +72,9 @@
             <!-- /.form-group -->
             <div class="form-group">
               <div class="col-sm-9 col-sm-offset-3">
-                <button type="submit" (click)="AddProject(addprojectForm)" [disabled]="addprojectForm.invalid" class="btn btn-info">
+                <button type="submit" (click)="AddProject(addprojectForm)" [disabled]="addprojectForm.invalid" class="btn btn-danger">
                   {{UpdateFlag == false ? 'Add':'Update' }}</button>
-                <button type="reset" id="reset" class="btn btn-info ml-1">Reset</button>
+                <button type="button" (click)="reset(addprojectForm)" id="reset" class="btn btn-danger ml-1">Reset</button>
               </div>
             </div>
           </div>
@@ -84,7 +84,7 @@
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12">
       <div class="card">
-        <div class="card-header bg-success text-white">Project Details</div>
+        <div class="card-header bg-info text-white">Project Details</div>
         <div class="card-body">
           <div class="form-row">
             <div class="form-group col-md-6">
@@ -119,7 +119,7 @@
           </div>
           <hr>
           <table class="table table-bordered table-stripped" [mfData]="projectDetails" #mf="mfDataTable"  [mfRowsOnPage]="10">
-        <thead class="bg-success text-white">
+        <thead class="bg-info text-white">
           <tr>
             <th scope="col"><mfDefaultSorter by="Name">Project Name</mfDefaultSorter></th>
             <th scope="col"><mfDefaultSorter by="Priority">Priority</mfDefaultSorter></th>
@@ -139,10 +139,10 @@
             <td>
               <div class=" btn-toolbar" role="toolbar">
                 <div class="btn-group" role="group">
-                  <input type="button" (click)="Edit(project.ProjectId)" class="btn btn-info" value="Edit">
+                  <input type="button" (click)="Edit(project.ProjectId)" class="btn btn-danger" value="Edit">
                 </div>
                 <div class="btn-group ml-2" role="group">
-                  <input type="button" (click)="OpenModalPopup(content, project.ProjectId)" class="btn btn-info" value="Delete">
+                  <input type="button" (click)="OpenModalPopup(content, project.ProjectId)" class="btn btn-danger" value="Delete">
                 </div>
               </div>
             </td>
@@ -174,7 +174,7 @@
     <p>Are you sure do you want to delete this project?</p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-info" (click)="Delete()">Delete</button>
-    <button type="button" class="btn btn-info" (click)="modal.close('Close Click')">Cancel</button>
+    <button type="button" class="btn btn-danger" (click)="Delete()">Delete</button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Close Click')">Cancel</button>
   </div>
 </ng-template>
