--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand navbar-dark bg-secondary">
+<nav class="navbar navbar-expand navbar-dark bg-dark">
     <a class="navbar-brand" routerLink="viewtask">
-        <b>Task Manager</b>
+        <b>Project Manager</b>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -10,25 +10,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav nav-bar navbar-nav ml-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="adduser">
+                <a class="nav-link" routerLink="user">
                     <b>User</b>
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="addproject">
+                <a class="nav-link" routerLink="project">
                     <b>Project</b>
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="addtask">
+                <a class="nav-link" routerLink="task">
                     <b>Task</b>
                 </a>
             </li>
-            <li class="nav-item" routerLinkActive="active">
+            <!-- <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="viewtask">
                     <b>View Task</b>
                 </a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
