--- a/src/app/User/add-user/add-user.component.html
+++ b/src/app/User/add-user/add-user.component.html
@@ -62,7 +62,7 @@
           </div>
           <hr>
           <table class="table table-bordered table-stripped"  [mfData]="userDetails" #mf="mfDataTable" [mfRowsOnPage]="10">
-          <thead class="table-dark">
+          <thead class="bg-info text-white">
             <tr>
               <th scope="col"><mfDefaultSorter by="FirstName">First Name</mfDefaultSorter></th>
               <th scope="col"><mfDefaultSorter by="LastName">Last Name</mfDefaultSorter></th>
