--- a/src/app/Project/add-project/add-project.component.html
+++ b/src/app/Project/add-project/add-project.component.html
@@ -5,7 +5,7 @@
     <div class="col-lg-4 col-md-4 col-sm-12">
       <form #addprojectForm="ngForm" novalidate class="form-horizontal" role="form">
         <div class="card">
-          <div class="card-header bg-info text-white">Add Project</div>
+          <div class="card-header bg-info text-white">Project</div>
           <div class="card-body">
             <div class="form-group">
               <label for="task" class="col-sm-5 control-label">Name</label>
@@ -43,10 +43,10 @@
                 </div>
               </div>
              
-            <div class="form-group" *ngIf="setDateFlag">
+            <div class="form-group">
               <label for="startdate" class="col-sm-5 control-label">Start Date</label>
               <div class="col-sm-9">
-                <input type="text" [required]="setDateFlag" [disabled]="!setDateFlag" [(ngModel)]="project.Start_Date"  [(bsValue)]="project.Start_Date"
+                <input type="text" [required]="setDateFlag" [disabled]="!setDateFlag" [ngModel]="project.Start_Date" (ngModelChange)="onStartDateChange($event)"  [(bsValue)]="project.Start_Date"
                   value="{{project.Start_Date | date:'dd/MM/yyyy'}}" [bsConfig]="startdatePickerConfig" #startdatecontrol="ngModel" name="startdate"
                   bsDatepicker [class.is-invalid]="startdatecontrol.invalid && startdatecontrol.touched"
                   [class.is-valid]="startdatecontrol.valid" placement="right" class="form-control">
@@ -54,7 +54,7 @@
                   is required</span>
               </div>
             </div>
-            <div class="form-group" *ngIf="setDateFlag">
+            <div class="form-group">
               <label for="enddate" class="col-sm-5 control-label">End Date</label>
               <div class="col-sm-9">
                 <input type="text" [required]="setDateFlag" [disabled]="!setDateFlag" [(ngModel)]="project.End_Date" [(bsValue)]="project.End_Date"
@@ -133,8 +133,8 @@
           <tr>
             <td>{{project.Name}}</td>
             <td>{{project.Priority}}</td>
-            <td>{{project.StartDate}}</td>
-            <td>{{project.EndDate}}</td>
+            <td>{{project.StartDate | date : 'dd/MM/yyyy'}}</td>
+            <td>{{project.EndDate  | date : 'dd/MM/yyyy'}}</td>
             <td>{{project.Manager}}</td>
             <td>
               <div class=" btn-toolbar" role="toolbar">
