--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="viewtask">
+    <a class="navbar-brand" routerLink="Task">
         <b>Project Manager</b>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -10,17 +10,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav nav-bar navbar-nav ml-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="user">
+                <a class="nav-link" routerLink="User">
                     <b>User</b>
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="project">
+                <a class="nav-link" routerLink="Project">
                     <b>Project</b>
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="task">
+                <a class="nav-link" routerLink="Task">
                     <b>Task</b>
                 </a>
             </li>
